Added a "common" project, in preparation for moving admin functionality into a separate project

--- a/Aplomb/Areas/Admin/Views/Model/Index.cshtml
+++ b/Aplomb/Areas/Admin/Views/Model/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Aplomb.Models.DataDiagram>
+﻿@model IEnumerable<Aplomb.Common.Models.DataDiagram>
 
 @{
     ViewBag.Title = "Data Diagrams";
