Moved admin area code into root of admin project

--- a/Aplomb_Admin/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Aplomb_Admin/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Aplomb_Admin.Models.ExternalLoginConfirmationViewModel
+﻿@model Aplomb.Admin.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
