--- a/Aplomb_Admin/Views/Account/Register.cshtml
+++ b/Aplomb_Admin/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model Aplomb_Admin.Models.RegisterViewModel
+﻿@model Aplomb.Admin.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
