--- a/Aplomb_Admin/Views/Account/_ChangePasswordPartial.cshtml
+++ b/Aplomb_Admin/Views/Account/_ChangePasswordPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
-@model Aplomb_Admin.Models.ManageUserViewModel
+@model Aplomb.Admin.Models.ManageUserViewModel
 
 <p>You're logged in as <strong>@User.Identity.GetUserName()</strong>.</p>
 
