--- a/Aplomb_Admin/Views/Model/Diagram.cshtml
+++ b/Aplomb_Admin/Views/Model/Diagram.cshtml
@@ -1,4 +1,4 @@
-﻿@model Aplomb.Areas.Admin.Models.DiagramEditModel
+﻿@model Aplomb.Admin.Models.DiagramEditModel
 
 @{
     ViewBag.Title = "Edit Diagram";
