--- a/Aplomb_Admin/Views/Account/Manage.cshtml
+++ b/Aplomb_Admin/Views/Account/Manage.cshtml
@@ -1,4 +1,4 @@
-﻿@using Aplomb_Admin.Models;
+﻿@using Aplomb.Admin.Models;
 @using Microsoft.AspNet.Identity;
 @{
     ViewBag.Title = "Manage Account";
