--- a/Aplomb_Admin/Views/Account/_SetPasswordPartial.cshtml
+++ b/Aplomb_Admin/Views/Account/_SetPasswordPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Aplomb_Admin.Models.ManageUserViewModel
+﻿@model Aplomb.Admin.Models.ManageUserViewModel
 
 <p class="text-info">
     You do not have a local username/password for this site. Add a local
