--- a/Aplomb_Admin/Content/Site.css
+++ b/Aplomb_Admin/Content/Site.css
@@ -40,3 +40,20 @@ input[type="checkbox"].input-validation-error {
 .validation-summary-valid {
     display: none;
 }
+
+
+.nav.navbar-nav li a.parent {
+    text-decoration: underline;
+}
+
+@media (min-width: 768px) {
+    .nav.navbar-nav li a.child {
+        font-style: italic;
+    }
+}
+
+@media (max-width: 767px) {
+    .nav.navbar-nav li a.child::before {
+        content: " •  ";
+    }
+}
