--- a/Aplomb_Admin/Views/Shared/_Layout.cshtml
+++ b/Aplomb_Admin/Views/Shared/_Layout.cshtml
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Aplomb admin</title>
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/content/admin")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
@@ -17,13 +18,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Aplomb", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Data model", "Index", "Data", new { area = "" }, new { @class = ViewBag.CurrentArea == "Data" ? "parent" : null })</li>
+                    @if (ViewBag.CurrentArea == "Data")
+                    {
+                        <li>@Html.ActionLink("Diagrams", "Index", "Diagrams", null, new { @class = "child" })</li>
+                        <li>@Html.ActionLink("Types", "Index", "Types", null, new { @class = "child" })</li>
+                    }
+                    <li>@Html.ActionLink("Site", "Index", "Site", new { area = "" }, new { @class = ViewBag.CurrentArea == "Site" ? "current" : null })</li>
+                    <li>@Html.ActionLink("Security", "Index", "Security", new { area = "" }, new { @class = ViewBag.CurrentArea == "Security" ? "current" : null })</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -39,6 +45,9 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+
+    @Scripts.Render("~/bundles/admin")
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
